fix(VListItem): align content to start when there is two or three line

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -77,6 +77,10 @@
   grid-area: content
   overflow: hidden
 
+  .v-list-item--two-line &,
+  .v-list-item--three-line &
+    align-self: start
+
 .v-list-item-action
   align-self: center
   display: flex
